fix: toggle alignement

--- a/apps/gauzy/src/app/pages/dashboard/time-tracking/time-tracking.component.scss
+++ b/apps/gauzy/src/app/pages/dashboard/time-tracking/time-tracking.component.scss
@@ -80,6 +80,11 @@
       height: 5px !important;
     }
   }
+  ::ng-deep {
+    .toggle-label {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .custom-container {
